updating various layout issues

--- a/assets/_styles/components/modal.scss
+++ b/assets/_styles/components/modal.scss
@@ -140,6 +140,9 @@
       text-indent: -9999px;
       @include svg('internal-modal-close');
     }
+    &__content {
+      margin-bottom: $gutter;
+    }
     &--alert {
       border-radius: 3px;
       padding: 75px 20px 20px;
